kubernetes/apps/metube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
  labels:
    app.kubernetes.io/name: metube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: metube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metube
    spec:
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-downloads
