kubernetes/apps/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  labels:
    app.kubernetes.io/name: metube
spec:
  selector:
    app.kubernetes.io/name: metube
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
